
// ------------------------------------------------------------------------------------------------------------------
// This is auto generated code. Every manually change in this code will be overwritten at the next code generation! |
// ------------------------------------------------------------------------------------------------------------------
        
using DoofesZeug.Attributes;
using DoofesZeug.Attributes.Pattern;



namespace DoofesZeug.Models.Human.Professions
{
    [Generated]
    [Builder]
    public class Carpenter : Profession
    {
        public Carpenter() : base(WellKnownProfession.Carpenter)
        {
        }
    }
}
